Fix slightly overflowing drawer (on the screen right edge)

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
 
 .right-sticky-section.sticky-section {
   right: 0;
-  width: 50px;
+  width: 47px;
 
   -webkit-transition: all 200ms ease-out;
   -moz-transition: all 200ms ease-out;
